examples/test/testpolicy4560.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy4560
  namespace: namespace214
spec:
  podSelector:
    matchLabels:
      key13: value44
      key28: value13
      key17: value36
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key9: value38
      podSelector:
        matchLabels:
          key22: value44
